# code-agent

./: .codex-i18n-spec.md  .gitignore  .mcp.json  .security-allowlist  .vercelignore  48  AGENTS.md  CHANGELOG.md  CLAUDE.md  Code-Agent-产品介绍.pptx  Code-Agent-介绍.pptx  DESIGN.md  README.md  TODOS.md  TOOL_SYSTEM_ANALYSIS.md  code-agent-policy.example.toml  code_agent_presentation.html  corgi_sleeping.html  coupon_fields.xlsx  dist  electron-esbuild.config.yaml  esbuild.config.ts  eslint.config.js  fixed_order_stats.py  hello_world.py  http_status_codes.py  knip.json  lint-staged.config.mjs  node_modules  package-lock.json  package.json  particle_animation.html  password_generator.html  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  pythagorean_theorem.tex  qrcode_generator.html  snake_game.html  snake_game_complete.html  (+12 more)
.claude/: ralph-loop.local.md
.github/: README.md
.husky/: pre-commit
.plans/: SPRINT_SUMMARY.md
accordion/: index.html  style.css
admin-console/: README.md  middleware.ts  package-lock.json  package.json  proxy.ts
artifact-knowledge/: README.md
ci/: swarm-health.json
cloud-agent/: .gitignore  package.json  tsconfig.json  vercel.json
cloud-api/: ARCHIVED.md  README.md  package-lock.json  package.json  test-server.js  vercel.json
config/: control-plane-public-keys.json  poppler-sidecar.lock.json
docs/: ARCHITECTURE.md  CONSTITUTION.md  DEPLOYMENT-ISSUES.md  DEPLOYMENT.md  EXCEL_BENCHMARK_OPTIMIZATION_PLAN.md  (+21 more)
src-tauri/: Cargo.toml  Info.plist  mic-helper.swift  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_app_icon.rs
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: agent_halo.rs  appshots.rs  main.rs  native_app_icon.rs  native_desktop.rs  pip.rs
(+7949 files in other folders)
