[package]
name = "code-agent-tauri"
version = "0.16.50"
description = "Code Agent desktop shell"
authors = ["Lin Chen"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ctrlc = "3.4"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
