[package]
name = "code-agent-tauri"
version = "0.16.50"
description = "Agent Neo desktop shell"
authors = ["Lin Chen"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ctrlc = "3.4"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSBitmapImageRep", "NSImage", "NSWorkspace"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSDictionary", "NSGeometry", "NSString", "NSURL"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
